--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,27 @@
+
 *{
-  margin: 0;
-  padding:10px;
+  
+  
   box-sizing:border-box
 }
 body {
-  
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  margin: 0;
+  /* padding: 20px 40px; */
+  font-family: Cardo,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ffe8cc;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+a{
+  text-decoration:none;
+  color:black;
+  font-size:25px;
 }
