added padding to nav container

--- a/src/components/nav-bar/nav-bar.styles.scss
+++ b/src/components/nav-bar/nav-bar.styles.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 2px solid rgba(126, 121, 121, 0.274);
+    padding: 0px 40px;
 
 
     .link-container {
