--- a/src/components/content/sub-content.styles.scss
+++ b/src/components/content/sub-content.styles.scss
@@ -1,11 +1,8 @@
-.sub-content-container{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    width:100%;
-    height:100vh;
-    background-color: brown;
-   
-    
-
+.sub-content-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #ffc078;
 }
