--- a/src/components/content/landing-content.styles.scss
+++ b/src/components/content/landing-content.styles.scss
@@ -1,8 +1,9 @@
 .landing-content-container{
     display:flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     width:100%;
     height:91vh;
+    padding:40px;
       
 }
