--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #ffe8cc;
 
+  background-color: #e9ddcecc;
+  
 }
 
 code {
@@ -24,4 +25,7 @@ a{
   text-decoration:none;
   color:black;
   font-size:25px;
+}
+p {
+  max-width: 50ch;
 }
