added home animations

--- a/src/components/nav-bar/nav-bar.styles.scss
+++ b/src/components/nav-bar/nav-bar.styles.scss
@@ -2,11 +2,16 @@
        
       
 .nav-container {
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
     display:flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 2px solid rgba(126, 121, 121, 0.274);
+    animation: .5s spreadStart ease-out;   
     padding: 0px 40px;
+    transition:1s;
 
 
     .link-container {
@@ -16,9 +21,27 @@
         gap:50px;
 
     }
+    
 
 
 
 
 }
+@keyframes spreadStart {
+    0%{
+    opacity: 0%;
+    transform: scaleX(0);
+    }
+    100%{
+        opacity: 100%;
+        
+    }
+    
+}
+.active{
+    border-bottom:0px;
+    
+}
+
+
 
