--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -3,16 +3,21 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  height: 91vh;
+  height: 100vh;
   padding: 40px;
   position:relative;
+
+ 
  
 
   .description-content {
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    
+      
+    
+    
     
     h1
     {
@@ -22,33 +27,52 @@
         font-size:80px;
         text-align: center;
         margin-bottom:20px;
+        animation: top-to-bottom .5s ease-out forwards;
+        opacity: 0%;
+        animation-delay: .4s;
+        @keyframes top-to-bottom {
+
+          0%{
+            opacity:0%;
+            transform: translateY(-50px);
+          }
+          100%{
+            opacity:100%;
+          }
+          
+        }
+        
+
        
         
        
 }
-h2{
-  position:relative;
-  text-align: center;
-  margin-top:0px;
-  font-size:35px;
-  height:100px;
-  &::after{
+// h2{
+//   position:relative;
+//   text-align: center;
+//   margin-top:0px;
+//   font-size:35px;
+//   height:100px;
+//   &::after{
    
-    content:"";
-    position:absolute;
-    bottom:0;
-    left:0;
-    background-color:rgba(126, 121, 121, 0.274);
-    width:25rem;
-    height:.1rem;
-    border-radius:50px;
-    stretch: 1s ease-in-out forwards;        animation: line-
+//     content:"";
+//     position:absolute;
+//     bottom:0;
+//     left:0;
+//     background-color:rgba(126, 121, 121, 0.274);
+//     width:25rem;
+//     height:.1rem;
+//     border-radius:50px;
+//     stretch: 1s ease-in-out forwards;        animation: line-
     
-}
-}
+// }
+// }
 p {
   max-width: 50ch;
   text-align: center;
+  animation: top-to-bottom .5s ease-out forwards;
+        opacity: 0%;
+        animation-delay: .8s;
 }
 
    
@@ -59,6 +83,9 @@ p {
       width: 100%;
       margin-top: 10px;
       margin-left: 10px;
+      animation: top-to-bottom .5s ease-out forwards;
+        opacity: 0%;
+        animation-delay: 1.2s;
       .home-schedule-button {
         border-radius: 10px;
         border: 1.5px solid black;
@@ -85,6 +112,10 @@ p {
       align-content: center;
       justify-content: space-around;
       gap:50px;
+      opacity: 0%;
+      animation: .5s spreadStart ease-out forwards ; 
+      
+      animation-delay: 1.4s;
       svg {
         width: 24px;
         height: 24px;
@@ -120,6 +151,11 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
+    opacity: 0%;
+    animation: top-to-bottom .5s ease-out forwards;
+        opacity: 0%;
+        animation-delay: 2s;
+        cursor: pointer;
     .down-label{
       font-size: 20px;
       color: rgba(0, 0, 0, 0.438);
@@ -127,21 +163,32 @@ p {
     .down-icon{
       font-size: 30px;
       color: rgba(0, 0, 0, 0.438);
+      animation: .5s down-bounce alternate infinite
     }
-    .down-icon:hover{
-      animation: 1s down-bounce infinite
-    }
+    
     @keyframes down-bounce {
       0%{
-        transform:scale(1.0);
+        transform:translatey(-5px);
         
   
       }
       100%{
-        transform:scale(1.1);
+        transform:translatey(1);
       }
       
     }
   }
+  // .down-container:hover{
+  //   animation: .1s learn-more-hover
+  // }
+  // @keyframes learn-more-hover {
+  //   0%{
+  //     transform: scale(1);
+  //   }
+  //   100%{
+  //     text-replace: scale(1.1);
+  //   }
+    
+  // }
  
 }
