--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -1,11 +1,34 @@
+
+.scroll-container{
+  
+  scroll-snap-type: y mandatory;
+  overflow: auto;
+  height:100vh;
+
+  section{
+    
+    scroll-snap-align:start;
+    height:100vh;
+
+    // &:nth-of-type(1){
+    //   background-color: blue;
+    // }
+    // &:nth-of-type(2){
+    //   background-color: yellow;
+    // }
+    // &:nth-of-type(3){
+    //   background-color: orange;
+    // } 
+  }
+
 .home-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  height: 100vh;
   padding: 40px;
   position:relative;
+  
 
  
  
@@ -158,7 +181,7 @@ p {
     animation: top-to-bottom .5s ease-out forwards;
         opacity: 0%;
         animation-delay: 2s;
-        cursor: pointer;
+       
     .down-label{
       font-size: 20px;
       color: rgba(0, 0, 0, 0.438);
@@ -195,3 +218,5 @@ p {
   // }
  
 }
+}
+
