--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -37,6 +37,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-right:15px;
     
       
     
@@ -114,22 +115,30 @@ p {
         border: 1.5px solid black;
         background-color: #c7975de1;
         color: black;
+        text-align: center;
 
         width: 100px;
         height: 30px;
+        font-size:15px;
+      
+       
+        
       }
-      .home-learn-more-button {
-        border-radius: 10px;
-        background-color: #f1f3f500;
-        border: 1.5px solid #c7975de1;
-
-        width: 100px;
-        height: 30px;
+      .home-schedule-button:hover{
+        transform: scale(1.02);
+        box-shadow: 2px;
+        cursor: pointer;
+      
+        background-color: #ddb585af;;
+      
       }
+     
+      
+      
     }
     .icons-container {
       margin-top: 30px;
-      margin-left: 20px;
+      margin-left: 10px;
       display: flex;
       align-items: center;
       align-content: center;
