--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -1,14 +1,11 @@
-
-.scroll-container{
-  
+.scroll-container {
   scroll-snap-type: y mandatory;
   overflow: auto;
-  height:100vh;
+  height: 100vh;
 
-  section{
-    
-    scroll-snap-align:start;
-    height:100vh;
+  section {
+    scroll-snap-align: start;
+    height: 100vh;
 
     // &:nth-of-type(1){
     //   background-color: blue;
@@ -18,214 +15,185 @@
     // }
     // &:nth-of-type(3){
     //   background-color: orange;
-    // } 
+    // }
   }
 
-.home-container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  padding: 40px;
-  position:relative;
-  
-
- 
- 
-
-  .description-content {
+  .home-container {
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    margin-right:15px;
-    
-      
-    
-    
-    
-    h1
-    {
-        position: relative;
-        
-        margin:0px;
-        font-size:80px;
-        text-align: center;
-        margin-bottom:20px;
-        animation: top-to-bottom .5s ease-out forwards;
-        opacity: 0%;
-        animation-delay: .4s;
-        @keyframes top-to-bottom {
+    width: 100%;
+    padding: 40px;
+    position: relative;
 
-          0%{
-            opacity:0%;
+    .description-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-right: 15px;
+
+      h1 {
+        position: relative;
+
+        margin: 0px;
+        font-size: 80px;
+        text-align: center;
+        margin-bottom: 20px;
+        animation: top-to-bottom 0.5s ease-out forwards;
+        opacity: 0%;
+        animation-delay: 0.4s;
+        @keyframes top-to-bottom {
+          0% {
+            opacity: 0%;
             transform: translateY(-50px);
           }
-          100%{
-            opacity:100%;
+          100% {
+            opacity: 100%;
           }
-          
         }
-        
+      }
+      // h2{
+      //   position:relative;
+      //   text-align: center;
+      //   margin-top:0px;
+      //   font-size:35px;
+      //   height:100px;
+      //   &::after{
 
-       
-        
-       
-}
-// h2{
-//   position:relative;
-//   text-align: center;
-//   margin-top:0px;
-//   font-size:35px;
-//   height:100px;
-//   &::after{
-   
-//     content:"";
-//     position:absolute;
-//     bottom:0;
-//     left:0;
-//     background-color:rgba(126, 121, 121, 0.274);
-//     width:25rem;
-//     height:.1rem;
-//     border-radius:50px;
-//     stretch: 1s ease-in-out forwards;        animation: line-
-    
-// }
-// }
-p {
-  max-width: 50ch;
-  text-align: center;
-  animation: top-to-bottom .5s ease-out forwards;
+      //     content:"";
+      //     position:absolute;
+      //     bottom:0;
+      //     left:0;
+      //     background-color:rgba(126, 121, 121, 0.274);
+      //     width:25rem;
+      //     height:.1rem;
+      //     border-radius:50px;
+      //     stretch: 1s ease-in-out forwards;        animation: line-
+
+      // }
+      // }
+      p {
+        max-width: 50ch;
+        text-align: center;
+        animation: top-to-bottom 0.5s ease-out forwards;
         opacity: 0%;
-        animation-delay: .8s;
-}
+        animation-delay: 0.8s;
+        font-size:20px;
+      }
 
-   
-
-    .home-button-container {
-      display: flex;
-      justify-content: space-evenly;
-      width: 100%;
-      margin-top: 10px;
-      margin-left: 10px;
-      animation: top-to-bottom .5s ease-out forwards;
+      .home-button-container {
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+        margin-top: 10px;
+        margin-left: 10px;
+        animation: top-to-bottom 0.5s ease-out forwards;
         opacity: 0%;
         animation-delay: 1.2s;
-      .home-schedule-button {
-        border-radius: 10px;
-        border: 1.5px solid black;
-        background-color: #c7975de1;
-        color: black;
-        text-align: center;
+        .home-schedule-button {
+          border-radius: 10px;
+          border: 1.5px solid black;
+          background-color: #c7975de1;
+          color: black;
+          text-align: center;
 
-        width: 100px;
-        height: 30px;
-        font-size:15px;
-      
-       
-        
+          width: 100px;
+          height: 30px;
+          font-size: 15px;
+        }
+        .home-schedule-button:hover {
+          transform: scale(1.02);
+          box-shadow: 2px;
+          cursor: pointer;
+
+          background-color: #ddb585af;
+        }
       }
-      .home-schedule-button:hover{
-        transform: scale(1.02);
-        box-shadow: 2px;
-        cursor: pointer;
-      
-        background-color: #ddb585af;;
-      
+      .icons-container {
+        margin-top: 30px;
+        margin-left: 10px;
+        display: flex;
+        align-items: center;
+        align-content: center;
+        justify-content: space-around;
+        gap: 50px;
+        opacity: 0%;
+        animation: 0.5s spreadStart ease-out forwards;
+
+        animation-delay: 1.4s;
+        svg {
+          width: 24px;
+          height: 24px;
+        }
+        .tw:hover {
+          animation: 0.2s hovericon forwards;
+          cursor: pointer;
+        }
+        .ig:hover {
+          animation: 0.2s hovericon forwards;
+          cursor: pointer;
+        }
+        .yt:hover {
+          animation: 0.2s hovericon forwards;
+          cursor: pointer;
+        }
+        @keyframes hovericon {
+          0% {
+            transform: scale(1);
+          }
+          100% {
+            transform: scale(1.3);
+          }
+        }
       }
-     
-      
-      
     }
-    .icons-container {
-      margin-top: 30px;
-      margin-left: 10px;
+    // .description-content h1::after{
+    //     content:'';
+
+    // }
+
+    .down-container {
+      position: absolute;
+      bottom: 0;
+
       display: flex;
+      flex-direction: column;
       align-items: center;
-      align-content: center;
-      justify-content: space-around;
-      gap:50px;
       opacity: 0%;
-      animation: .5s spreadStart ease-out forwards ; 
-      
-      animation-delay: 1.4s;
-      svg {
-        width: 24px;
-        height: 24px;
+      animation: top-to-bottom 0.5s ease-out forwards;
+      opacity: 0%;
+      animation-delay: 2s;
+
+      .down-label {
+        font-size: 20px;
+        color: rgba(0, 0, 0, 0.438);
       }
-      .tw:hover {
-        animation: .2s hovericon forwards;
-        cursor: pointer;
+      .down-icon {
+        font-size: 30px;
+        color: rgba(0, 0, 0, 0.438);
+        animation: 0.5s down-bounce alternate infinite;
       }
-      .ig:hover {
-        animation: .2s hovericon forwards;
-        cursor: pointer;
-      }
-      .yt:hover {
-        animation: .2s hovericon forwards;
-        cursor: pointer;
-      }
-      @keyframes hovericon {
+
+      @keyframes down-bounce {
         0% {
-          transform: scale(1);
+          transform: translatey(-5px);
         }
         100% {
-          transform: scale(1.3);
+          transform: translatey(1);
         }
       }
     }
-  }
-  // .description-content h1::after{
-  //     content:'';
+    // .down-container:hover{
+    //   animation: .1s learn-more-hover
+    // }
+    // @keyframes learn-more-hover {
+    //   0%{
+    //     transform: scale(1);
+    //   }
+    //   100%{
+    //     text-replace: scale(1.1);
+    //   }
 
-  // }
-  
-  .down-container{
-    position:absolute;
-    bottom:0;
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    opacity: 0%;
-    animation: top-to-bottom .5s ease-out forwards;
-        opacity: 0%;
-        animation-delay: 2s;
-       
-    .down-label{
-      font-size: 20px;
-      color: rgba(0, 0, 0, 0.438);
-    }
-    .down-icon{
-      font-size: 30px;
-      color: rgba(0, 0, 0, 0.438);
-      animation: .5s down-bounce alternate infinite
-    }
-    
-    @keyframes down-bounce {
-      0%{
-        transform:translatey(-5px);
-        
-  
-      }
-      100%{
-        transform:translatey(1);
-      }
-      
-    }
+    // }
   }
-  // .down-container:hover{
-  //   animation: .1s learn-more-hover
-  // }
-  // @keyframes learn-more-hover {
-  //   0%{
-  //     transform: scale(1);
-  //   }
-  //   100%{
-  //     text-replace: scale(1.1);
-  //   }
-    
-  // }
- 
 }
-}
-
