--- a/src/components/nav-bar/nav-bar.styles.scss
+++ b/src/components/nav-bar/nav-bar.styles.scss
@@ -2,9 +2,9 @@
        
       
 .nav-container {
-    position:fixed;
+    
+    position: fixed;
     top:0;
-    left:0;
     width:100%;
     display:flex;
     justify-content: space-between;
@@ -12,7 +12,10 @@
     animation: .5s spreadStart ease-out forwards;   
     padding: 0px 40px;
     transition:1s;
-    z-index:1000;
+    background-color:rgba(255, 255, 255, 0);
+    padding: 1.5rem 2rem;
+    z-index: 99;
+
 
 
     .link-container {
