--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,29 @@
 
-*{
-  
-  
-  box-sizing:border-box
+ /* buttons #c7975de1; 
+    main background-color #e9ddcecc;
+    titles #c7975de1;
+
+*/
+
+h1,h2,h3{
+  color:rgb(30, 29, 29);
+  /* color:#996321e1; */
+}
+*, ::before, ::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html,#root{
+  height:100%;
 }
 body {
   margin: 0;
   /* padding: 20px 40px; */
+  height: 100%;
+  width:100%;
+  
+  
   font-family: Cardo,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,12 +31,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background-color: #e9ddcecc;
+  color:rgb(30, 29, 29);
   
   
 }
-body section {
-  scroll-snap-type: start;
-}
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -27,7 +44,17 @@ code {
 }
 a{
   text-decoration:none;
-  color:black;
+  color:rgb(30, 29, 29);
   font-size:25px;
+}
+p{
+
+  width:50ch;
+  font-size:20px;
+  
+}
+button{
+  color:#5e3c13e1;
+            
 }
 
