--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -1,30 +1,18 @@
-.scroll-container {
-  scroll-snap-type: y mandatory;
-  overflow: auto;
-  height: 100vh;
 
-  section {
-    scroll-snap-align: start;
-    height: 100vh;
-
-    // &:nth-of-type(1){
-    //   background-color: blue;
-    // }
-    // &:nth-of-type(2){
-    //   background-color: yellow;
-    // }
-    // &:nth-of-type(3){
-    //   background-color: orange;
-    // }
-  }
-
+.home-wrapper{
+  display: flex;
+  flex-direction: column;
+  width:100%;
   .home-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     width: 100%;
     padding: 40px;
     position: relative;
+    min-height:100vh;
+    
+   
 
     .description-content {
       display: flex;
@@ -32,7 +20,7 @@
       align-items: center;
       margin-right: 15px;
 
-      h1 {
+      .home-title {
         position: relative;
 
         margin: 0px;
@@ -78,7 +66,7 @@
         animation: top-to-bottom 0.5s ease-out forwards;
         opacity: 0%;
         animation-delay: 0.8s;
-        font-size:20px;
+        
       }
 
       .home-button-container {
@@ -90,24 +78,24 @@
         animation: top-to-bottom 0.5s ease-out forwards;
         opacity: 0%;
         animation-delay: 1.2s;
-        .home-schedule-button {
-          border-radius: 10px;
-          border: 1.5px solid black;
-          background-color: #c7975de1;
-          color: black;
-          text-align: center;
+        // .home-book-button {
+        //   border-radius: 10px;
+        //   border: 1.5px solid black;
+        //   background-color: #c7975de1;
+        //   color: black;
+        //   text-align: center;
 
-          width: 100px;
-          height: 30px;
-          font-size: 15px;
-        }
-        .home-schedule-button:hover {
-          transform: scale(1.02);
-          box-shadow: 2px;
-          cursor: pointer;
+        //   width: 100px;
+        //   height: 30px;
+        //   font-size: 15px;
+        // }
+        // .home-schedule-button:hover {
+        //   transform: scale(1.02);
+        //   box-shadow: 2px;
+        //   cursor: pointer;
 
-          background-color: #ddb585af;
-        }
+        //   background-color: #ddb585af;
+        // }
       }
       .icons-container {
         margin-top: 30px;
