--- a/src/routes/home/how-it-works/how-it-works.styles.scss
+++ b/src/routes/home/how-it-works/how-it-works.styles.scss
@@ -1,11 +1,76 @@
+.how-it-works-page{
+        
 .how-it-works-container{
   
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
         width: 100%;
-        height: 100vh;
-        background-color: #c7975de1;
+       
+        padding:2rem;
+        gap:3rem;
+       
+        background-color: #bfae97e1;
+        overflow-y: auto;
+       
+
+        
+       
+.how-it-works-header[disabled]
+{
+    pointer-events: none;
+    padding: 1.5rem 2rem;
+    opacity: 0.8; 
+}
+        .first-row-how {
+        
+        display:flex;
+        justify-content: space-around;
+        align-items: center;
+        width:100%;
+        
+       
+        
+       
+       
+        .first-image-how .first-image{
+                width:100%;
+                height:auto;
+               
+              
+        }
+        .first-how-title{
+                color:#5e3c13e1;
+                font-size:3rem;
+             
+        }
+
+        }
+        .second-row-how {
+        display:flex;
+        justify-content: space-around;
+        align-items: center;
+        width:100%;
+    
+     
+      
+       
+        
+        .second-image-how .second-image{
+                width:100%;
+                height:auto;
+               
+                
+
+        }
+        .second-how-title{
+                color:#5e3c13e1;
+                font-size: 3rem;
+        }
+        
+        }
       
       
+}
 }
