finished adding all components front-end

--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -1,7 +1,5 @@
 .footer-text{
-    position:relative;
-    left: 50%;
--webkit-transform: translateX(-50%);
-transform: translateX(-50%)
+    margin-top:3rem;
+   text-align: center;
 }  
 
