--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -39,3 +39,24 @@
 
     background-color: #ddb585af;
   }
+
+  .book-time-button{
+    border-radius: 10px;
+    border: 1.5px solid black;
+    background-color: #e9ddcecc;;
+    color: black;
+    text-align: center;
+
+    width: 100px;
+    height: 30px;
+    font-size: 15px;
+
+  }
+  .book-time-button:hover{
+    transform: scale(1.02);
+    box-shadow: 2px;
+    cursor: pointer;
+
+    background-color: #ddb585af;
+
+  }
