--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -40,6 +40,13 @@
           }
         }
       }
+      .reiki-title{
+
+        animation: top-to-bottom 0.5s ease-out forwards;
+        opacity: 0%;
+        animation-delay: 0.6s;
+
+      }
       // h2{
       //   position:relative;
       //   text-align: center;
