--- a/src/routes/home/how-it-works/how-it-works.styles.scss
+++ b/src/routes/home/how-it-works/how-it-works.styles.scss
@@ -8,7 +8,7 @@
         flex-direction: column;
         width: 100%;
        
-        padding:2rem;
+        padding:5rem;
         gap:3rem;
        
         background-color: #bfae97e1;
@@ -17,18 +17,14 @@
 
         
        
-.how-it-works-header[disabled]
-{
-    pointer-events: none;
-    padding: 1.5rem 2rem;
-    opacity: 0.8; 
-}
+
         .first-row-how {
         
         display:flex;
         justify-content: space-around;
         align-items: center;
         width:100%;
+        
         
        
         
@@ -38,7 +34,11 @@
                 width:100%;
                 height:auto;
                
+               
               
+        }
+        .first-how-description{
+                margin-left:5rem;
         }
         .first-how-title{
                 color:#5e3c13e1;
@@ -52,14 +52,18 @@
         justify-content: space-around;
         align-items: center;
         width:100%;
+        
     
      
       
        
-        
+        .second-how-description{
+                margin-right:5rem;
+        }
         .second-image-how .second-image{
                 width:100%;
                 height:auto;
+                
                
                 
 
@@ -67,6 +71,7 @@
         .second-how-title{
                 color:#5e3c13e1;
                 font-size: 3rem;
+                
         }
         
         }
