--- a/src/components/input-column/input-column.styles.scss
+++ b/src/components/input-column/input-column.styles.scss
@@ -1,8 +1,8 @@
 .input-column{
+    
     display:flex;
-    justify-content: column;
-    width:100%;
-
+    flex-direction: column;
+    width: 100%;
     
     
 }
