--- a/src/components/input-row/input-row.styles.scss
+++ b/src/components/input-row/input-row.styles.scss
@@ -1,10 +1,14 @@
 .input-row {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     gap:2rem;
+    width: 100%;
+  
     input{
         
         width:100%;
+        
+        
         border:none;
         outline: none;
         border-bottom: 1px solid black;
