--- a/src/routes/contact/contact.styles.scss
+++ b/src/routes/contact/contact.styles.scss
@@ -3,18 +3,21 @@
     width:100%;
     align-items: center;
     justify-content: center;
+    gap:2rem;
+    flex-grow: 1;
+    // flex-wrap: wrap;
     
 
-    .contact-content{
-        display:flex;
-        width:100%;
-        justify-content: space-evenly;
-        align-items: center;
+//     .contact-content{
+//         display:flex;
+//         width:100%;
+//         justify-content: space-evenly;
+//         align-items: center;
 
 
 
 
-}
+// }
     
     
 
