--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -19,14 +19,15 @@
       flex-direction: column;
       align-items: center;
       margin-right: 15px;
+      gap:1rem;
 
       .home-title {
         position: relative;
 
         margin: 0px;
-        font-size: 80px;
+        //font-size: 80px;
+        font-size: 5.5rem;
         text-align: center;
-        margin-bottom: 20px;
         animation: top-to-bottom 0.5s ease-out forwards;
         opacity: 0%;
         animation-delay: 0.4s;
