--- a/src/routes/home/how-it-works/how-it-works.styles.scss
+++ b/src/routes/home/how-it-works/how-it-works.styles.scss
@@ -39,6 +39,10 @@
         }
         .first-how-description{
                 margin-left:5rem;
+                
+                p {     
+                        max-width: 75ch;
+                }
         }
         .first-how-title{
                 color:#5e3c13e1;
@@ -59,6 +63,10 @@
        
         .second-how-description{
                 margin-right:5rem;
+                p {
+                        max-width: 75ch;
+                }
+               
         }
         .second-image-how .second-image{
                 width:100%;
