--- a/src/components/contact-card/contact-card.styles.scss
+++ b/src/components/contact-card/contact-card.styles.scss
@@ -6,6 +6,8 @@
     align-items: center;
     justify-content: center;
     gap: 1rem;
+    padding:2rem;
+    // border-right:1px solid rgb(171, 157, 137);
  
     
     .contact-header{
@@ -23,6 +25,7 @@
     border-radius: 4px;
     padding:2rem;
     border:1px solid rgb(171, 157, 137);
+
     
 
 
