--- a/src/routes/book/book.styles.scss
+++ b/src/routes/book/book.styles.scss
@@ -3,7 +3,17 @@
     width:100%;
     align-items: center;
     justify-content: center;
+    flex-grow: 1;
+
+.book-page-content{
+    display:flex;
+    width:100%;
+    align-items: flex-start;
+    justify-content: center;
+    gap:1rem;
+    
     flex-grow:1;
+
     
     
 
@@ -13,92 +23,126 @@
         justify-content: space-evenly;
         align-items: center;
         flex-direction: column;
+        padding:2rem;
+        border-right:1px solid rgb(171, 157, 137);
         gap:2rem;
         .book-title{
             font-size: 5.5rem;
         }
+        .book-time-button_active{
+            border-radius: 10px;
+            border: 1.5px solid black;
+            background-color:#ddb585af;
+            color: black;
+            text-align: center;
+        
+            width: 100px;
+            height: 30px;
+            font-size: 15px;
+        
+          }
+          .book-time-button{
+            border-radius: 10px;
+            border: 1.5px solid black;
+            background-color: #e9ddcecc;;
+            color: black;
+            text-align: center;
+        
+            width: 100px;
+            height: 30px;
+            font-size: 15px;
+        
+          }
+         
+          
+          .book-time-button:hover{
+            transform: scale(1.04);
+            box-shadow: 2px;
+            cursor: pointer;
+           
+        
+          }
 
-        .react-calendar{
+          .contact-button_active{
+
+            border-radius: 10px;
+            border: 1.5px solid black;
+            background-color: #c7975de1;
+            color: black;
+            text-align: center;
+        
+            width:20rem;
+            max-width: 15rem;
+            height: 2rem;
+            max-height: 2rem;
+            font-size: 1.2rem;
+        
+          }
+          .contact-button_disabled{
+
+            border-radius: 10px;
+            border: 1.5px solid black;
+            background-color: #c7975de1;
+            opacity: 40%;
+            color: black;
+            text-align: center;
+        
+            width:20rem;
+            max-width: 15rem;
+            height: 2rem;
+            max-height: 2rem;
+            font-size: 1.2rem;
+        
+          }
+          
+          .contact-button_active:hover {
+            transform: scale(1.02);
+            box-shadow: 2px;
+            cursor: pointer;
+        
+            background-color: #ddb585af;
+          }
+          .book-summary{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
             width:100%;
-            max-width: 50rem;
-            border:1px solid rgb(171, 157, 137);
-            padding:1.5rem;
-            background-color: rgb(231, 225, 218);
             
-            .react-calendar__navigation{
-                
-                display:flex;
-                justify-content: space-evenly;
-
-                .react-calendar__navigation__label{
-                    pointer-events: none;
-                }
-    
-
-
-                .react-calendar__navigation__next2-button{
-                    display:none;
-                    
-
-                }
-                .react-calendar__navigation__prev2-button{
-                    display:none;
-                }
-                > button{
-                   font-size: 2rem;
-                   border: none;
-                    background: none;
-                }
-
+            .summary-title{
+                border-bottom: 1px solid black;
+                width:100%;
+                max-width: 40rem;
             }
+          }
+        
 
-            .react-calendar__viewContainer{
-                .react-calendar__month-view__weekdays{
-                    
-                   
-                    padding-top: 1rem;
-                  
-                    > div{
-                        text-align: center;
-                        font-size: 1.5rem;
-                        abbr{
-                            text-decoration: none;
-                        }
-                }
-               
-                   
-                }
+    }
+.location-content{
+    display:flex;
+    width:100%;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    padding: 2rem;
+    gap:2rem;
+   
+    flex-direction: column;
+    flex-grow: 1;
 
-                .react-calendar__month-view__days{
-                    .react-calendar__tile--active{
-                        
-                        background-color: rgb(158, 145, 127);
-                    }
-                   > button{
-
-                    padding:20px;
-                    font-size: 1.5rem;
-                   border: none;
-                    background: none;
-                    border-radius: 50px;
-
-                   }
-                   > button:hover:enabled{
-                    background-color: rgb(196, 182, 162);
-                   }
-                }
-            }
-            
-        }
-
-
-
-
-
-
+    .location-title{
+        font-size: 5.5rem;
+        justify-self: left;
+    }
+    .location-container{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
     
     
 
     
+}
 }
