front end finished (non-responsive)

--- a/src/components/contact-card/contact-card.styles.scss
+++ b/src/components/contact-card/contact-card.styles.scss
@@ -38,6 +38,13 @@
         background-color: rgb(231, 225, 218);
         padding:.5rem;
     }
+
+}
+.error-paragraph{
+    padding-top:1rem;
+    color:rgb(192, 34, 34);
+    font-size: 1rem;
+    width:100%;
 }
 }
 }
