--- a/src/routes/about/about.styles.scss
+++ b/src/routes/about/about.styles.scss
@@ -1,20 +1,23 @@
 .about-page{
     display:flex;
     width:100%;
+    max-width: 100%;
     align-items: center;
     justify-content: center;
     flex-grow: 1;
-    
+
 
 
 .about-flex-container{
     display:flex;
         width:100%;
+        max-width: 60rem;
         justify-content: space-evenly;
         align-items: center;
         flex-direction: column;
         gap:2rem;
         padding:2rem;
+        border:5px solid rgb(171, 157, 137);
 .about-title-container{
     display: flex;
     align-items: center;
