--- a/src/components/custom-calendar/custom-calendar.styles.scss
+++ b/src/components/custom-calendar/custom-calendar.styles.scss
@@ -72,3 +72,52 @@
 }
 
 
+@media (max-width:480px){
+    .react-calendar{
+        .react-calendar__navigation{
+        
+    
+            .react-calendar__navigation__label{
+              
+            }
+    
+    
+    
+            .react-calendar__navigation__next2-button{
+              
+                
+    
+            }
+            .react-calendar__navigation__prev2-button{
+          
+            }
+            > button{
+               font-size: 1.5rem;
+             
+            }
+    
+        }
+        .react-calendar__viewContainer{
+            .react-calendar__month-view__weekdays{
+            
+           
+              
+                > div{
+                 
+                    font-size: 1rem;
+                    abbr{
+                       
+                    }
+            }
+           
+               
+            }
+            .react-calendar__month-view__days{
+             > button{
+                padding:10px;
+                font-size: 1.2rem;
+             }
+            }
+        }
+    }
+}
