--- a/src/index.css
+++ b/src/index.css
@@ -16,13 +16,14 @@ h1,h2,h3{
 }
 html,#root{
   height:100%;
+
 }
 body {
   margin: 0;
   /* padding: 20px 40px; */
   height: 100%;
   width:100%;
-  
+ 
   
   font-family: Cardo,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -57,4 +58,12 @@ button{
   color:#5e3c13e1;
             
 }
+
+/* @media (max-width:550px) {
+
+  html,#root,body{
+    overflow-x: hidden;
+  }
+  
+} */
 
