--- a/src/routes/home/heal-together/heal-together.styles.scss
+++ b/src/routes/home/heal-together/heal-together.styles.scss
@@ -16,13 +16,14 @@
             justify-content: center;
 
 
-            height:5rem;
             
 
         }
         .heal-title{
             color:rgb(30, 29, 29);
             font-size: 4rem;
+            padding:1rem;
+            text-align: center;
 
         }
         .heal-image-container{
@@ -38,7 +39,9 @@
         }
         .message-info{
             text-align: center;
+            font-size:1.3rem;
     
         }
+
         
 }
