--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -6,7 +6,7 @@
     text-align: center;
 
     width: 100px;
-    height: 30px;
+    min-height: 30px;
     font-size: 15px;
   }
   .main-button:hover {
@@ -26,9 +26,8 @@
     text-align: center;
 
     width:20rem;
-    max-width: 15rem;
-    height: 2rem;
-    max-height: 2rem;
+  
+    min-height: 2rem;
     font-size: 1.2rem;
 
   }
