--- a/src/components/mobile-nav/nav-mobile.styles.scss
+++ b/src/components/mobile-nav/nav-mobile.styles.scss
@@ -1,7 +1,6 @@
-
        
       
-.main-nav-container {
+.mobile-nav-container {
     
     position: fixed;
     top:0;
@@ -9,21 +8,29 @@
     display:flex;
     justify-content: space-between;
     align-items: center;
-    animation: .5s spreadStart ease-out forwards;   
+  
     padding: 0px 40px;
     transition:1s;
-    background-color:rgba(255, 255, 255, 0);
+    background-color:rgba(255, 228, 196, 0.67);
     padding: 1.5rem 2rem;
-    z-index: 99;
+
 
 
 
     .link-container {
         display:flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
+        flex-direction: column;
         gap:50px;
         padding:1rem;
+      
+        flex:1;
+        > a{
+            color:black;
+            font-size: 2rem;
+            font-weight: bold;
+        }
 
     }
     
@@ -32,19 +39,28 @@
 
 
 }
+.closed{
+    display: none;
+    transition: opacity 1s ease-out;
+    opacity: 0;
+ }
 
-.other-nav-container {
+.close-nav{
+   
+    display:none;
+  
+
+ }
+
+.other-mobile-nav-container {
     
     display:flex;
     justify-content: space-between;
-    align-items: center;
-    animation: .5s spreadStart ease-out forwards;   
+    align-items: center; 
     padding: 0px 40px;
     transition:1s;
     background-color:rgba(255, 255, 255, 0);
     padding: 1.5rem 2rem;
-    z-index: 99;
-
 
 
     .link-container {
