mobile responsive checkout and confirmation

--- a/src/routes/checkout/checkout.styles.scss
+++ b/src/routes/checkout/checkout.styles.scss
@@ -110,3 +110,13 @@
         width:100%;
     }   
 }
+@media (max-width:1000px){
+
+    .checkout-page{
+      flex-direction: column;
+      padding-top:5rem;
+    
+    }
+  
+   
+  }
