--- a/src/routes/confirmation/confirmation.styles.scss
+++ b/src/routes/confirmation/confirmation.styles.scss
@@ -6,10 +6,16 @@
     flex-direction: column;
     gap:2rem;
     flex-grow: 1;
+    padding:2rem;
+    > h3{
+        text-align: center;
+    }
     .checkout-line{
         height:1px;
         width:100%;
         max-width: 30rem;
-        background-color: rgb(171, 157, 137)
+        background-color: rgb(171, 157, 137);
+        
+        
     }
 }
