styled register and login page

--- a/react-front-end/src/components/nav-bar/nav-bar.styles.scss
+++ b/react-front-end/src/components/nav-bar/nav-bar.styles.scss
@@ -26,7 +26,9 @@
         padding:1rem;
 
     }
-    
+    .user-icon{
+        margin-top: 10px;
+    }
 
 
 
@@ -54,7 +56,9 @@
         gap:50px;
 
     }
-    
+    .user-icon{
+        margin-top: 10px;
+    }
 
 
 
