--- a/react-front-end/src/routes/auth/login.styles.scss
+++ b/react-front-end/src/routes/auth/login.styles.scss
@@ -6,26 +6,51 @@
     justify-content: center;
     gap:2rem;
     flex-grow: 1;
+  
  
-   
+    .auth-input{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      max-width:20rem;
+      gap:.5rem;
+
+      input{
+          padding:5px;
+          background-color: rgb(252, 248, 243);
+      }
+
+      
+    }
 
     .login-form{
         display:flex;
-        width:100%;
+      max-width:450px;
+      padding:50px 0 50px 0;
+       width:100%;
         flex-direction: column;
-        
+        gap:1.5rem;  
         align-items: center;
-    
+        border: 2px solid #816037e1;
+        border-radius: 5px;
 
-
-
-
+        .login-button{
+          padding:10px;
+          width:100%;
+          max-width:20rem;
+          font-size:1rem;
+        }
 }
 .register-link{
-    color:blue;
-    font-size: 1.5rem;
+  color:#1b1207e1;
+    font-size: 1rem;
+    
     
 }
+.register-link:hover{
+  text-decoration: underline; 
+}
+
     
     
 
