--- a/react-front-end/src/routes/home/home.styles.scss
+++ b/react-front-end/src/routes/home/home.styles.scss
@@ -45,7 +45,8 @@
       .p-wrapper{
         max-width: 75ch ;
         font-size:1.2rem;
-        text-align: center;    
+        text-align: center;  
+        color:#725746;  
       }
       .reiki-title{
         animation: top-to-bottom 0.5s ease-out forwards;
