--- a/react-front-end/src/index.css
+++ b/react-front-end/src/index.css
@@ -5,9 +5,12 @@
 
 */
 
-h1,h2,h3{
+h1,h3{
   color:rgb(30, 29, 29);
   /* color:#996321e1; */
+}
+h2{
+  color:#725746;
 }
 *, ::before, ::after {
   padding: 0;
@@ -25,13 +28,14 @@ body {
   width:100%;
  
   
-  font-family: Cardo,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Libre Bodoni', serif,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-color: #e9ddcecc;
+  /* background-color: #e9ddcecc; */
+  background-color: #fffef8;
   color:rgb(30, 29, 29);
   
   
