--- a/react-front-end/src/routes/home/how-it-works/how-it-works.styles.scss
+++ b/react-front-end/src/routes/home/how-it-works/how-it-works.styles.scss
@@ -38,7 +38,7 @@
               
         }
         .first-how-description{
-               padding:2rem;
+              
                 max-width: 75ch;
                 
                font-size:1.5rem;
@@ -46,6 +46,7 @@
         .first-how-title{
                 color:#5e3c13e1;
                 font-size:3rem;
+                text-align: center;
              
         }
 
@@ -90,9 +91,17 @@
         .how-it-works-page{
                 .how-it-works-container{
                         padding:1rem;
-                  .first-row-how {flex-direction: column;
+                        .first-how-title{
+                                text-align: center;
+                        }
+                  .first-row-how {flex-direction: column-reverse;
+                        justify-content: center;
+                        align-items: center;
                         .first-how-description{
-                                padding:0;
+                                padding:10px;
+                                
+                               
+                               
                         }
                 align-self: left;}
                   .second-row-how{
