--- a/react-front-end/src/routes/home/how-it-works/how-it-works.styles.scss
+++ b/react-front-end/src/routes/home/how-it-works/how-it-works.styles.scss
@@ -55,7 +55,8 @@
         display:flex;
         justify-content: space-around;
         align-items: center;
-        width:100%;
+        width:70%;
+        max-width: 100%;
         
     
      
